header footer comments done

--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
 
 <body>
 
-    <!-- header tag for folowing bootsrap symantics-->
+    <!-- header tag for following Bootstrap semantics -->
     <header class="custom-header-background" style="position: fixed;width: 100%;z-index: 1;height: 15%;">
         <div class="row text-white">
-            <!-- header division left part-->
+            <!-- header division left part -->
             <div class="col-9 col-md-6 p-3 pl-5">
                 <h1 class="pt-2 pb-3 pl-3">Safvan P</h1>
             </div>
 
-            <!-- header division right part-->
-            <div class="col-3 col-md-6 my-auto"> <!--my-auto  to keep in center-->
+            <!-- header division right part -->
+            <div class="col-3 col-md-6 my-auto"> <!-- my-auto to vertically center align content -->
                 <nav class="navbar navbar-expand-lg navbar-light ">
                     <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse"
                         data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false"
@@ -40,21 +40,29 @@
                     <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
 
                         <ul class="navbar-nav mt-2 mt-lg-0 ml-auto" style="font-size: larger;">
-                            <li class="nav-item ">
-                                <a class="nav-link pt-2 highlight-text text-white" href="#home-section">Home <span
-                                        class="sr-only">(current)</span></a>
+                            <!-- Navigation links -->
+                            <li class="nav-item">
+                                <a class="nav-link pt-2 highlight-text text-white" href="#home-section">Home
+                                    <!-- Home link (current) -->
+                                    <span class="sr-only">(current)</span>
+                                    <!-- Screen reader only text for accessibility -->
+                                </a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link pt-2 highlight-text text-white" href="#services-section">Sevices</a>
+                                <!-- Services link -->
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link pt-2 highlight-text text-white" href="#skills-section">Skills</a>
+                                <!-- Skills link -->
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link pt-2 highlight-text text-white" href="#experiences-section">Experience</a>
+                                <a class="nav-link pt-2 highlight-text text-white"
+                                    href="#experiences-section">Experience</a> <!-- Experience link -->
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link pt-2 highlight-text text-white" href="#contact-me-form">Contact Me</a>
+                                <a class="nav-link pt-2 highlight-text text-white" href="#contact-me-form">Contact
+                                    Me</a> <!-- Contact Me link -->
                             </li>
                         </ul>
                     </div>
@@ -63,37 +71,40 @@
         </div>
     </header>
 
-    <section id="home-section" style="padding-top:7rem"  class="home-section-background">
+
+    <section id="home-section" style="padding-top:7rem" class="home-section-background">
         <div class="container">
             <div class="row align-items-center">
 
-                <!-- left division, for placing photo -->
+                <!-- Left division, for placing photo -->
                 <div class="col-md-6 text-center">
-                    <img src="https://media.licdn.com/dms/image/D5603AQFavAE2Ccesug/profile-displayphoto-shrink_400_400/0/1679044344508?e=1692835200&v=beta&t=mudngRY-S5paTKLpIEjVKNIeGDijGa3Nqy-2fUFJSIY" alt="Image Not available" class="safvan-profile-image">
-
-                
+                    <img src="https://media.licdn.com/dms/image/D5603AQFavAE2Ccesug/profile-displayphoto-shrink_400_400/0/1679044344508?e=1692835200&v=beta&t=mudngRY-S5paTKLpIEjVKNIeGDijGa3Nqy-2fUFJSIY"
+                        alt="Image Not available" class="safvan-profile-image">
                 </div>
 
-
-                <!-- Right Division, for wraiting description -->
+                <!-- Right Division, for writing description -->
                 <div class="col-md-6">
-                    <h5 style="font-size: 1.8rem; font-weight: bold; line-height: 1.2em; margin: 1rem 0;margin-left: 12rem;">About Me</h5>
+                    <h5
+                        style="font-size: 1.8rem; font-weight: bold; line-height: 1.2em; margin: 1rem 0;margin-left: 12rem;">
+                        About Me</h5>
                     <h6 class="custom-text-about-me">
+                        <!-- Description about the person -->
                         Passionate and self-motivated Java Developer with 1.8 years of experience as a Systems Associate
                         at Infosys.<br>
                         I am a quick learner with a genuine passion for coding and a strong interest in exploring new
                         technologies.<br>
-                        Seeking a Java Developer role in a dynamic team to work on challenging projects
-                        and enhance my programming skills. I am also familiar with C and Python.
-                    
+                        Seeking a Java Developer role in a dynamic team to work on challenging projects and enhance my
+                        programming skills.
+                        I am also familiar with C and Python.<br><br>
                         Committed to pushing boundaries and making a significant impact in the software development
                         industry.
-                    </h6>                    
+                    </h6>
                 </div>
             </div>
         </div>
         <br><br> <br><br>
     </section>
+
 
     <!--Section for Services and Skills-->
     <section class="services-skills-experiences p-5  ">
