all comments added

--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
 
                 <!--Grid column-->
                 <div class="col-md-9 mb-md-0 mb-5">
-                    <form id="contact-form" name="contact-form" action="mail.php" method="POST">
+                    <form id="contact-form" name="contact-form" action="" method="POST">
 
                         <!--Grid row-->
                         <div class="row">
@@ -353,10 +353,6 @@
             </div>
         </div>
     </footer>
-
-
-
-
 
 
     <!-- boostrap depdendcies from https://getbootstrap.com/docs/4.4/getting-started/introduction/-->
