all completed, ready to publish

--- a/index.html
+++ b/index.html
@@ -89,13 +89,13 @@
                         About Me</h5>
                     <h6 class="custom-text-about-me">
                         <!-- Description about the person -->
-                        Passionate and self-motivated Java Developer with 1.8 years of experience as a Systems Associate
+                        Passionate and self-motivated <span style="font-weight:1000; font-size: 1.1em;"> Java Developer </span>  with 1.8 years of experience as a Systems Associate
                         at Infosys.<br>
                         I am a quick learner with a genuine passion for coding and a strong interest in exploring new
                         technologies.<br>
                         Seeking a Java Developer role in a dynamic team to work on challenging projects and enhance my
-                        programming skills.
-                        I am also familiar with C and Python.<br><br>
+                        programming skills,
+                        I am also familiar with C and Python.<br>
                         Committed to pushing boundaries and making a significant impact in the software development
                         industry.
                     </h6>
