all completed, ready to publish

--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
                             <i class="fab fa-github text-white fa-2x"></i> <!-- Increase icon size to fa-2x -->
                         </a>
                         <!-- Facebook -->
-                        <a href="#" class="social-icon">
+                        <a href="https://www.facebook.com/muhammed.safvan.94801" class="social-icon">
                             <i class="fab fa-facebook-f text-white fa-2x"></i> <!-- Increase icon size to fa-2x -->
                         </a>
                     </div>
