--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 <!-- Right Division, for writing description -->
                 <div class="col-md-6">
                     <h5
-                        style="font-size: 1.8rem; font-weight: bold; line-height: 1.2em; margin: 1rem 0;margin-left: 12rem;">
+                        style="font-size: 1.8rem; font-weight: bold; line-height: 1.2em;" class="text-center">
                         About Me</h5>
                     <h6 class="custom-text-about-me">
                         <!-- Description about the person -->
@@ -202,7 +202,7 @@
             <div class="row " id="experiences-section">
 
                 <!-- Experience card 1 -->
-                <div class="col-md-6 pl-5 mt-2">
+                <div class="col-md-6 mt-2">
                     <a href="https://www.infosys.com/" style="text-decoration: none;" class="text-dark">
                         <div class="card text-center p-2 " style="max-width: 100%;">
                             <img src="images/infosys_logo.png" alt="Infosys Limited">
@@ -215,7 +215,7 @@
                 </div>
 
                 <!-- Experience card 2 -->
-                <div class="col-md-6 pl-5 mt-2">
+                <div class="col-md-6 mt-2">
                     <a href="https://ineuron.ai/" style="text-decoration: none;" class="text-dark">
                         <div class="card text-center p-2" style="max-width: 100%;height: 100%;">
                             <img src="images/ineuron_logo.png" alt="iNeuron">
