services working perfect

--- a/index.html
+++ b/index.html
@@ -111,10 +111,10 @@
         <div class="container pl-5 ">
 
             <!-- row for services-->
-            <h1 class="text-center text-dark pr-5" id="services-section">Services</h1>
-            <div class="row pl-5">
+            <h1 class="text-center text-dark p-2" id="services-section">Services</h1>
+            <div class="row p-2">
                 <!-- to see services 3 in one row for medium devices-->
-                <div class="col-md-4 mt-2">
+                <div class="col-12 col-md-4 mt-2">
                     <!-- services card -->
                     <div class="card text-center p-5" style="width: 18rem;height: 21rem;">
                         <i class="fa-solid fa-code fa-beat display-1 text-info" style="animation-duration: 5s;"></i>
@@ -125,7 +125,7 @@
                     </div>
                 </div>
 
-                <div class="col-md-4 mt-2">
+                <div class="col-12 col-md-4 mt-2">
                     <!-- services card -->
                     <div class="card text-center p-4" style="width: 18rem;height: 21rem;">
                         <i class="fa-solid fa-window-restore fa-beat display-1 text-info"
@@ -138,7 +138,7 @@
                     </div>
                 </div>
 
-                <div class="col-md-4 mt-2">
+                <div class="col-12 col-md-4 mt-2">
                     <!-- services card -->
                     <div class="card text-center p-5" style="width: 18rem;height: 21rem;">
                         <i class="fa-solid fa-icons fa-beat display-1 text-info" style="animation-duration: 5s;"></i>
@@ -157,7 +157,7 @@
             <h1 class="text-center text-dark pr-5">Skills</h1>
             <div class="row pl-5" id="skills-section">
 
-                <div class="col-md-4 mt-2">
+                <div class="col-6 col-md-4 mt-2">
                     <!-- Skills card -->
                     <div class="card text-center p-3" style="width: 18rem;height: 21rem;">
                         <i class="fa-brands fa-java fa-beat display-1 text-info" style="animation-duration: 5s;"></i>
@@ -169,7 +169,7 @@
                     </div>
                 </div>
 
-                <div class="col-md-4 mt-2">
+                <div class="col-6 col-md-4 mt-2">
                     <!-- skills card -->
                     <div class="card text-center p-3" style="width: 18rem;height: 21rem;">
                         <i class="fa-regular fa-file-code fa-beat display-1 text-info"
@@ -182,7 +182,7 @@
                     </div>
                 </div>
 
-                <div class="col-md-4 mt-2">
+                <div class="col-6 col-md-4 mt-2">
                     <!-- skills card -->
                     <div class="card text-center p-3" style="width: 18rem;height: 21rem;">
                         <i class="fa-solid fa-database fa-beat display-1 text-info" style="animation-duration: 5s;"></i>
