cards padding removed

--- a/index.html
+++ b/index.html
@@ -116,18 +116,18 @@
         <!-- to see services 3 in one row for medium devices-->
         <div class="col-12 col-md-4 mt-2">
           <!-- services card -->
-          <div class="card text-center p-5" style="height: 21rem;">
+          <div class="card text-center pt-5" style="height: 23rem;">
             <i class="fa-solid fa-code fa-beat display-1 text-info" style="animation-duration: 5s;"></i>
             <div class="card-body">
               <h5 class="card-title">Web Designing</h5>
-              <p class="card-text"> Creating visually appealing and user-friendly websites.</p>
+              <p class="card-text">Creating visually appealing and user-friendly responsive websites that leave a lasting impression and help businesses establish a strong online presence.</p>
             </div>
           </div>
         </div>
 
         <div class="col-12 col-md-4 mt-2">
           <!-- services card -->
-          <div class="card text-center p-5" style="height: 23rem;">
+          <div class="card text-center pt-5" style="height: 23rem;">
             <i class="fa-solid fa-window-restore fa-beat display-1 text-info" style="animation-duration: 5s;"></i>
             <div class="card-body">
               <h5 class="card-title">Fullstack Application Developement</h5>
@@ -139,7 +139,7 @@
 
         <div class="col-12 col-md-4 mt-2">
           <!-- services card -->
-          <div class="card text-center p-5" style="height: 23rem;">
+          <div class="card text-center pt-5" style="height: 23rem;">
             <i class="fa-solid fa-icons fa-beat display-1 text-info" style="animation-duration: 5s;"></i>
             <div class="card-body">
               <h5 class="card-title">Social Media Promotion</h5>
@@ -159,7 +159,7 @@
 
         <div class="col-12 col-md-4 mt-2">
           <!-- Skills card -->
-          <div class="card text-center p-5" style="height: 23rem;">
+          <div class="card text-center pt-5" style="height: 23rem;">
             <i class="fa-brands fa-java fa-beat display-1 text-info" style="animation-duration: 5s;"></i>
             <div class="card-body">
               <h5 class="card-title">Java, JEE,<br>SpringBoot Application Developement</h5>
@@ -171,7 +171,7 @@
 
         <div class="col-12 col-md-4 mt-2">
           <!-- skills card -->
-          <div class="card text-center p-5" style="height: 23rem;">
+          <div class="card text-center pt-5" style="height: 23rem;">
             <i class="fa-regular fa-file-code fa-beat display-1 text-info" style="animation-duration: 5s;"></i>
             <div class="card-body">
               <h5 class="card-title">HTML,CSS,JQuery,<br>Bootsrap,JavaScript</h5>
@@ -183,7 +183,7 @@
 
         <div class="col-12 col-md-4 mt-2">
           <!-- skills card -->
-          <div class="card text-center p-5" style="height: 23rem;">
+          <div class="card text-center pt-5" style="height: 23rem;">
             <i class="fa-solid fa-database fa-beat display-1 text-info" style="animation-duration: 5s;"></i>
             <div class="card-body">
               <h5 class="card-title">SQL,JDBC,Hibernate,<br>Spring Data JPA</h5>
