footer text modified

--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
           </div>
 
           <!-- Copyright -->
-          <p class="mt-4 mb-0  text-white footer-copyright-text">© 2023 Your Website. All rights reserved.</p>
+          <p class="mt-4 mb-0  text-white footer-copyright-text">© 2023  - All rights reserved.</p>
         </div>
       </div>
     </div>
