--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <!-- Left division, for placing photo -->
         <div class="col-md-6 text-center">
           <img
-            src="https://media.licdn.com/dms/image/D5603AQFavAE2Ccesug/profile-displayphoto-shrink_400_400/0/1679044344508?e=1692835200&v=beta&t=mudngRY-S5paTKLpIEjVKNIeGDijGa3Nqy-2fUFJSIY"
+            src="images/safvan_image.jpeg"
             alt="Image Not available" class="safvan-profile-image">
         </div>
 
