--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
           <h6 class="custom-text-about-me">
             <!-- Description about the person -->
             Passionate and self-motivated <span style="font-weight:1000; font-size: 1.1em;"> Java Developer </span> with
-            1.8 years of experience as a Systems Associate
+            2.6 years of experience as a Senior Systems Associate
             at Infosys.<br>
             I am a quick learner with a genuine passion for coding and a strong interest in exploring new
             technologies.<br>
@@ -207,8 +207,8 @@
             <div class="card text-center p-2 " style="max-width: 100%;">
               <img src="images/infosys_logo.png" alt="Infosys Limited">
               <div class="card-body">
-                <h5 class="card-title">Systems Associate<br>at Infosys Limited</h5>
-                <p class="card-text">1.8 years</p>
+                <h5 class="card-title">Senior Systems Associate<br>at Infosys Limited</h5>
+                <p class="card-text">2.6 years</p>
               </div>
             </div>
           </a>
